WebCore/platform/graphics/filters/FEMorphology.cpp
@@ -26,7 +26,6 @@
 #if ENABLE(FILTERS)
 #include "FEMorphology.h"
 
-#include "CanvasPixelArray.h"
 #include "Filter.h"
 #include "ImageData.h"
 
@@ -108,8 +107,10 @@ void FEMorphology::apply(Filter* filter)
 
     IntRect imageRect(IntPoint(), resultImage()->size());
     IntRect effectDrawingRect = requestedRegionOfInputImageData(in->absolutePaintRect());
-    RefPtr<CanvasPixelArray> srcPixelArray(in->resultImage()->getPremultipliedImageData(effectDrawingRect)->data());
+    RefPtr<ImageData> srcImageData = in->resultImage()->getPremultipliedImageData(effectDrawingRect);
+    ByteArray* srcPixelArray = srcImageData->data()->data();
     RefPtr<ImageData> imageData = ImageData::create(imageRect.width(), imageRect.height());
+    ByteArray* dstPixelArray = imageData->data()->data();
 
     int effectWidth = effectDrawingRect.width() * 4;
     
@@ -155,7 +156,7 @@ void FEMorphology::apply(Filter* filter)
                         (m_type == FEMORPHOLOGY_OPERATOR_DILATE && extrema[kernelIndex] >= entireExtrema))
                         entireExtrema = extrema[kernelIndex];
                 }
-                imageData->data()->set(y * effectWidth + 4 * x + channel, entireExtrema);
+                dstPixelArray->set(y * effectWidth + 4 * x + channel, entireExtrema);
             }
         }
     }
